Generate code from releases

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,12 @@ jobs:
     steps:
       - checkout
       - run: docker run -t -v $(pwd):/home/repo coinbase/salus
+  check-generated:
+    machine: true
+    steps:
+      - checkout
+      - run: make gen
+      - run: git diff --exit-code
 
 workflows:
   version: 2
@@ -97,6 +103,7 @@ workflows:
           requires:
             - setup
       - salus
+      - check-generated
 
 notify:
   webhooks:
