--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,13 +74,12 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker run -t -v $(pwd):/home/repo coinbase/salus
-  check-generated:
+      - run: make salus
+  check-gen:
     machine: true
     steps:
       - checkout
-      - run: make gen
-      - run: git diff --exit-code
+      - run: make check-gen
 
 workflows:
   version: 2
@@ -103,7 +102,7 @@ workflows:
           requires:
             - setup
       - salus
-      - check-generated
+      - check-gen
 
 notify:
   webhooks:
