--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
       name: default
     steps:
       - *fast-checkout
+      - run: apt-get install -y zstd
       - run: make test
   lint:
     executor:
