--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ version: 2.1
 executors:
   default:
     docker:
-      - image: circleci/golang:1.16
+      - image: cimg/go:1.16
         user: root # go directory is owned by root
     working_directory: /go/src/github.com/coinbase/rosetta-sdk-go
     environment:
