--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
       name: default
     steps:
       - *fast-checkout
+      - run: apt-get update
       - run: apt-get install -y zstd
       - run: make test
   lint:
@@ -70,6 +71,7 @@ jobs:
       name: default
     steps:
       - *fast-checkout
+      - run: apt-get update
       - run: apt-get install -y zstd
       - run: make test-cover
   salus:
