--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,13 +51,21 @@ jobs:
           go-version: ${{ env.go_version }}
       - run: make check-license
 
-  Check-format:
+  Check-Format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           version: latest
       - run: make check-format 
+  
+  Check-Gen:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          version: latest
+      - run: make check-gen 
 
   Coverage:
     runs-on: ubuntu-latest
